--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=791,5
+Size=565,86
 Collapsed=0
 
 [Window][Renderer.cpp::Update::Stats]
@@ -9,7 +9,22 @@ Size=338,48
 Collapsed=0
 
 [Window][Renderer.cpp::Update(float dt)]
-Pos=63,67
+Pos=52,100
 Size=393,105
+Collapsed=0
+
+[Window][Debug system]
+Pos=60,60
+Size=44,48
+Collapsed=0
+
+[Window][Render stats || Renderer.cpp::Update(float dt)]
+Pos=56,25
+Size=338,48
+Collapsed=0
+
+[Window][Render options || DebugSystem.cpp::Update(float dt)]
+Pos=58,90
+Size=329,354
 Collapsed=0
 
