--- a/imgui.ini
+++ b/imgui.ini
@@ -19,12 +19,32 @@ Size=44,48
 Collapsed=0
 
 [Window][Render stats || Renderer.cpp::Update(float dt)]
-Pos=56,25
-Size=338,48
+Pos=-1,8
+Size=352,48
 Collapsed=0
 
 [Window][Render options || DebugSystem.cpp::Update(float dt)]
-Pos=58,90
-Size=329,354
+Pos=8,76
+Size=233,353
+Collapsed=0
+
+[Window][Scene]
+Pos=1465,25
+Size=374,584
+Collapsed=0
+
+[Window][Properties]
+Pos=985,569
+Size=244,82
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=42,43
+Size=550,680
+Collapsed=0
+
+[Window][Stats || Renderer.cpp::Update(float dt)]
+Pos=7,15
+Size=226,48
 Collapsed=0
 
